--- a/Style.css
+++ b/Style.css
@@ -13,6 +13,9 @@ body {
 nav {
     display: flex;
     justify-content: space-between;
+    margin: 0 200px;
+    align-items: center;
+
    
 }
 .nav-title{
@@ -34,8 +37,24 @@ nav a {
 .btn-primary{
     font-size: 20px;
     font-weight: 700;
-    background-color: #FD6E0A;
+    background: #FD6E0A;
     border-radius: 5px;
     border: 0;
     color: #ffff;
+    padding: 15px 35px;
+}
+/* header related styles */
+.header{
+    background-color: #fff8f3;
+}
+
+/* banner related styles */
+.banner{
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-picture{
+    width: 500px;
+    height: 600px;
 }
